src/style.scss
/* ... */
#about {
  padding: 100px 0;
  background: linear-gradient(180deg, #2B366D 0%, #161F51 100%);
  background-color: $dark-blue;
  position: relative;
  z-index: 9;
  hr{
    margin-bottom: 40px;
  }
  .introduction-content {
    text-align: center;
    .top-area{
      max-width: 900px;
      margin: 0 auto;
    }
    h3 {
      margin-bottom: 30px;
    }
    p {
      color: $font-color;
    }
    .detail-box{
      max-width: 260px;
      margin: 0 auto;
      img{
        width: 35px;
        margin-bottom: 15px;
      }
    }
    h4{
      max-width: 940px;
      margin: 20px auto 0;
      padding-top: 30px;
      border-top: 1px solid #FFFFFF;
      color: $yellow;
    }
    a {
      &:hover {
        color: $yellow;
      }
    }
  }
  @media (max-width: 575px){
    padding: 60px 0;
  }
}

#speakers {
  padding: 100px 0 60px;
  background: linear-gradient(180deg, #FCEFDB 0%, #FFFCF7 0.01%, #FCEFDB 100%);
  position: relative;
  z-index: 9;
  h2 {
    color: $dark-blue;
  }
  .speakers-box {
    text-align: center;
    margin-bottom: 70px;
    .profile {
      transition: all .4s ease-in-out;
      img {
        max-width: 200px;
      }
      &:hover{
        filter: drop-shadow(8px 8px 0 $blue);
      }
    }
    .data-author {
      margin-top: 20px;
      .name {
        color: $dark-blue;
      }
      .role {
        color: $cyan-blue;
        font-size: 11px;
        font-weight: 800;
        line-height: 18px;
        text-align: center;
        letter-spacing: 0.21em;
        text-transform: uppercase;
        max-width: 200px;
        min-height: 40px;
        margin-bottom: 12px;
        &.width {
          max-width: 250px;
        }
      }
      .company {
        img {
          &.bettercloud{
            max-width: 120px;
          }
          &.grafana{
            max-width: 148px;
            position: relative;
            top: 6px;
          }
          &.datadog{
            max-width: 130px;
          }
          &.frameio{
            max-width: 130px;
          }
          &.clay{
            max-width: 60px;
          }
          &.databricks{
            max-width: 150px;
          }
          &.pinecone{
            max-width: 130px;
          }
          &.apollo-graphql{
            max-width: 120px;
          }
          &.linear{
            max-width: 110px;
          }
          &.epsagon{
            max-width: 70px;
          }
          &.big-id{
            max-width: 90px;
          }
          &.retool{
            max-width: 100px;
          }
          &.chronosphere{
            max-width: 150px;
          }
          &.merge{
            max-width: 110px;
          }
          &.hugging{
            max-width: 150px;
          }
          &.authzed{
            max-width: 135px;
          }
          &.courier{
            max-width: 200px;
            position: relative;
            top: 8px;
          }
        }
      }
    }
    &.more-speakers{
      position: relative;
      text-align: center;
      div:not(.data-author){
        background-color: #EDE0CE;
      }
      .profile{
        width: 200px;
        height: 200px;
        border-radius: 12px;
        margin: 0 auto 25px;
        &:hover{
          filter: none
        }
      }
      .name,
      .role{
        width: 155px;
        height: 16px;
        border-radius: 5px;
        margin: 0 auto 15px;
        animation: changeName 10s infinite ease-in-out;
      }
      @keyframes changeName {
        0%{
          width: 155px;
        }
        20%, 30%{
          width: 80px;
        }
        40%, 50%{
          width: 190px;
        }
        60%, 70%{
          width: 50px;
        }
        80%, 90%{
          width: 90px;
        }
        100%{
          width: 155px;
        }
      }
      .role{
        width: 65px;
        animation: changeRole 5s infinite ease-in-out;
      }
      @keyframes changeRole {
        0%{
          width: 65px;
        }
        20%, 30%{
          width: 35px;
        }
        40%, 50%{
          width: 80px;
        }
        60%, 70%{
          width: 120px;
        }
        80%, 90%{
          width: 90px;
        }
        100%{
          width: 65px;
        }
      }
      .company{
        // width: 100px;
        height: 25px;
        border-radius: 8px;
        margin: 35px auto 20px;
        animation: changeCompany 8s infinite ease-in-out;
      }
      @keyframes changeCompany {
        0%{
          width: 100px;
        }
        20%, 30%{
          width: 120px;
        }
        40%, 50%{
          width: 70px;
        }
        60%, 70%{
          width: 140px;
        }
        80%, 90%{
          width: 90px;
        }
        100%{
          width: 100px;
        }
      }
      img{
        max-width: 215px;
        position: absolute;
        top: 25%;
        left: 50%;
        transform: translateX(-50%);
        z-index: 1;
      }
    }
  }
  @media (max-width: 991px) {
    .speakers-box {
      margin-bottom: 50px;
    }
  }
  @media (max-width: 575px) {
    padding: 60px 0;
    .speakers-box {
      .data-author {
        .role {
          font-size: 9px;
          line-height: 14px;
          min-height: 20px;
        }
      }
    }
  }
}
/* ... */

